--- a/app/src/main/res/layout/activity_plat.xml
+++ b/app/src/main/res/layout/activity_plat.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PlatActivity">
+    android:layout_height="wrap_content"
+    android:paddingTop="0dp"
+    android:paddingBottom="10dp"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/image_plat"
+        android:layout_width="match_parent"
+        android:layout_height="600px"
+        android:padding="0dp"
+        android:layout_marginEnd="0dp"/>
+
+    <TextView
+        android:id="@+id/nom_plat_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:layout_marginEnd="0dp"/>
+
+</LinearLayout>
+
+
