--- a/app/src/main/res/layout/item_plat.xml
+++ b/app/src/main/res/layout/item_plat.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,10 +10,28 @@
     >
 
     <TextView
-        android:id="@+id/nom_plat"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/prix_plat"
+        android:layout_width="20dp"
+        android:layout_height="150px"
+        android:layout_marginStart="5dp"
         android:layout_weight="1"
-        />
+        android:gravity="center"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/nom_plat"
+        android:layout_width="50dp"
+        android:layout_height="150px"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textAlignment="viewStart"
+        tools:ignore="RtlCompat" />
+
+    <ImageView
+        android:id="@+id/icone_plat"
+        android:layout_width="150px"
+        android:layout_height="150px"
+        android:padding="0dp"
+        android:layout_marginEnd="10dp"/>
 
 </LinearLayout>
