--- a/app/src/main/res/layout/activity_plat.xml
+++ b/app/src/main/res/layout/activity_plat.xml
@@ -1,28 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="0dp"
-    android:paddingBottom="10dp"
-    >
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    tools:context=".PlatActivity">
 
-    <ImageView
-        android:id="@+id/image_plat"
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="600px"
-        android:padding="0dp"
-        android:layout_marginEnd="0dp"/>
+        android:layout_height="250dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/nom_plat_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="280dp"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/liste_ingredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="0dp"
-        android:layout_marginEnd="0dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="330dp"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/boutton_moins"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="40dp"
+        android:text="-"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/quantite"
+        app:layout_constraintTop_toBottomOf="@+id/liste_ingredients" />
+
+    <TextView
+        android:id="@+id/quantite"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="50dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/liste_ingredients" />
+
+    <Button
+        android:id="@+id/boutton_plus"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="50dp"
+        android:text="+"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/quantite"
+        app:layout_constraintTop_toBottomOf="@+id/liste_ingredients" />
+
+    <Button
+        android:id="@+id/prix"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        android:text="€"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quantite" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
