--- a/app/src/main/res/layout/item_plat.xml
+++ b/app/src/main/res/layout/item_plat.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    >
+    android:paddingBottom="10dp">
 
-    <TextView
-        android:id="@+id/prix_plat"
-        android:layout_width="20dp"
-        android:layout_height="150px"
-        android:layout_marginStart="5dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textAlignment="center" />
+    <ImageView
+        android:id="@+id/icone_plat"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:layout_marginStart="0dp"
+        android:padding="0dp" />
 
     <TextView
         android:id="@+id/nom_plat"
-        android:layout_width="50dp"
-        android:layout_height="150px"
+        android:layout_width="200dp"
+        android:layout_height="300px"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="0dp"
         android:layout_weight="1"
         android:gravity="center"
         android:textAlignment="viewStart"
         tools:ignore="RtlCompat" />
 
-    <ImageView
-        android:id="@+id/icone_plat"
-        android:layout_width="150px"
-        android:layout_height="150px"
-        android:padding="0dp"
-        android:layout_marginEnd="10dp"/>
+    <TextView
+        android:id="@+id/prix_plat"
+        android:layout_width="51dp"
+        android:layout_height="300px"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textAlignment="center"
+     />
 
 </LinearLayout>
