--- a/app/src/main/res/layout/activity_plat.xml
+++ b/app/src/main/res/layout/activity_plat.xml
@@ -39,11 +39,14 @@
 
             <!-- Right most TextView -->
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/nb_enregistrement"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginEnd="10dp"
+                android:background="#000000"
                 android:text="0"
+                android:gravity="center"
+                android:textAlignment="center"
                 android:textColor="#ffff"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -53,14 +56,14 @@
 
             <!-- Right most ImageView -->
             <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
+                android:id="@+id/panier"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginEnd="9dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/textView2"
+                app:layout_constraintEnd_toStartOf="@+id/nb_enregistrement"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/image_accueil" />
+                app:srcCompat="@drawable/cart" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
