--- a/app/src/main/res/layout/item_commande.xml
+++ b/app/src/main/res/layout/item_commande.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/nom_plat_commande"
-        android:layout_width="200dp"
+        android:layout_width="100dp"
         android:layout_height="300px"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="0dp"
@@ -47,5 +47,13 @@
         android:gravity="center"
         android:textAlignment="center"
         />
+
+    <ImageView
+        android:id="@+id/icone_supprimer"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:layout_marginStart="0dp"
+        android:src="@drawable/trash"
+        android:padding="0dp" />
 
 </LinearLayout>
