--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="60dp"
-        android:text="Bienvenue chez"
+        android:text="@string/messageAccueil"
         android:textColor="#FF9800"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="120dp"
         android:fontFamily="cursive"
-        android:text="DroidRestaurant"
+        android:text="@string/nomApplication"
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
