--- a/app/src/main/res/layout/item_commande.xml
+++ b/app/src/main/res/layout/item_commande.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="10dp">
 
     <ImageView
-        android:id="@+id/icone_plat_commande"
+        android:id="@+id/iconePlatCommande"
         android:layout_width="300px"
         android:layout_height="300px"
         android:layout_marginStart="0dp"
@@ -16,7 +16,7 @@
 
 
     <TextView
-        android:id="@+id/nom_plat_commande"
+        android:id="@+id/nomPlatCommande"
         android:layout_width="100dp"
         android:layout_height="300px"
         android:layout_marginStart="10dp"
@@ -27,7 +27,7 @@
         tools:ignore="RtlCompat" />
 
     <TextView
-        android:id="@+id/quantite_plat_commande"
+        android:id="@+id/quantitePlatCommande"
         android:layout_width="51dp"
         android:layout_height="300px"
         android:layout_marginStart="0dp"
@@ -38,7 +38,7 @@
         />
 
     <TextView
-        android:id="@+id/prix_plat_commande"
+        android:id="@+id/prixPlatCommande"
         android:layout_width="51dp"
         android:layout_height="300px"
         android:layout_marginStart="0dp"
@@ -49,7 +49,7 @@
         />
 
     <ImageView
-        android:id="@+id/icone_supprimer"
+        android:id="@+id/iconeSupprimer"
         android:layout_width="300px"
         android:layout_height="300px"
         android:layout_marginStart="0dp"
