--- a/app/src/main/res/layout/item_caroussel.xml
+++ b/app/src/main/res/layout/item_caroussel.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/slide_screen_card_view"
+        android:id="@+id/slideCarrousel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="0dp"
@@ -18,7 +18,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/slide_screen_item_iv"
+                android:id="@+id/imageCarrousel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
