--- a/app/src/main/res/layout/activity_plat.xml
+++ b/app/src/main/res/layout/activity_plat.xml
@@ -77,7 +77,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/carrousel"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginTop="70dp"
@@ -92,7 +92,7 @@
         android:layout_marginTop="28dp"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewpager" />
+        app:layout_constraintTop_toBottomOf="@+id/carrousel" />
 
     <TextView
         android:id="@+id/listeIngredients"
